5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1594_1800.log
== TEST (2019-03-19 16:01:54) 
-- CODE:
input()
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:01) 
-- CODE:
print(input())
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:03) 
-- CODE:
print(input())
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:06) 
-- CODE:
print(input
-- ERROR:
File "XXXX", line 2
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:11) 
-- CODE:
print(input)
-- OUTPUT:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:29) 
-- CODE:
print(input"")
-- ERROR:
File "XXXX", line 1
    print(input"")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:41) 
-- CODE:
print("input")
-- OUTPUT:
input
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:51) 
-- CODE:
print(input(""))
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:02:52) 
-- CODE:
print(input(""))
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:04:34) 
-- CODE:
var=input("digite o numero: ")
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:08:15) 
-- CODE:
1var=input("digite o numero: ")
2var=input("digite o numero: ")
3var=input("digite o numero: ")
-- ERROR:
File "XXXX", line 1
    1var=input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:08:34) 
-- CODE:
var1=input("digite o numero: ")
var2=input("digite o numero: ")
var3=input("digite o numero: ")
-- ERROR:
File "XXXX", line 1
    1var=input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:08:44) 
-- CODE:
var=input("digite o numero: ")
var=input("digite o numero: ")
var=input("digite o numero: ")
-- ERROR:
File "XXXX", line 1
    1var=input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:08:49) 
-- CODE:
var=input("digite o numero: ")
var=input("digite o numero: ")
var=input("digite o numero: ")
-- ERROR:
File "XXXX", line 1
    1var=input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:09:01) 
-- CODE:
var=input("digite o numero: ")
var=input("digite o numero: ")
var=input("digite o numero: ")
-- ERROR:
File "XXXX", line 1
    1var=input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:09:04) 
-- CODE:
var=input("digite o numero: ")
var=input("digite o numero: ")
var=input("digite o numero: ")
-- EXECUTION TIME:
0.139479
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:

-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:

-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:04:36) 
-- CODE:
var=input("digite o numero: ")
var=input("digite o numero: ")
var=input("digite o numero: ")
-- ERROR:
File "XXXX", line 1
    1var=input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:05:45) 
-- CODE:
int((input()))
int((input()))
int((input()))
-- ERROR:
File "XXXX", line 1
    1var=input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:06:22) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
print(a+b+c)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:06:27) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
print(a+b+c)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:06:28) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
print(a+b+c)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:06:38) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
print(a+b+c)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:06:45) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
print(a+b+c)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:10:08) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))

print(a**2+b**2+c**2)

-- OUTPUT:
1925
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:10:25) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))

print(a**2+b**2+c**2)

-- OUTPUT:
1925
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:11:43) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))

print((a**2+b**2+c**2)/a+b+c)

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:12:23) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print((a**2+b**2+c**2)/a+b+c)

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:13:48) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(a**2+b**2+c**2/a+b+c)

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:14:04) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(a**2+b**2+c**2/a+b+c)

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:14:06) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(a**2+b**2+c**2/a+b+c)

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:14:35) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(a**2+b**2+c**2/a+b+c)

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:14:52) 
-- CODE:
a= (input())
b= (input())
c= (input())
a !=0
b !=0
c !=0
print(a**2+b**2+c**2/a+b+c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(a**2+b**2+c**2/a+b+c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:15:10) 
-- CODE:
a= (input())
b= (input())
c= (input())
a !=0
b !=0
c !=0
print(int(a**2+b**2+c**2/a+b+c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(a**2+b**2+c**2/a+b+c))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:16:42) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(a**2+b**2+c**2/a+b+c)

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:18:14) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(a**2+b**2+c**2/a+b+c)

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:18:41) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(int(a**2+b**2+c**2/a+b+c))

-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:18:46) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(int(a**2+b**2+c**2/a+b+c))

-- OUTPUT:
1125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:18:59) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round(a**2+b**2+c**2/a+b+c,6))

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:19:34) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d !=0
d= a+b+c
print(round(a**2+b**2+c**2/d,6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d !=0
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:19:48) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
print(round(a**2+b**2+c**2/d,6))

-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:20:07) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
print(round(a**a+b**b+c**c/d,6))

-- OUTPUT:
2.745215183413162e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:20:12) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
print(round(a**a+b**b+c**c/d,6))

-- OUTPUT:
2.745215183413162e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:20:34) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
print(round(a**a+b**b+c**c/d,6))

-- OUTPUT:
2.745215183413162e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:20:43) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
print(round(a**2+b**2+c**2/d,6))

-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:21:05) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
print(round(a**2 + b**2 + c**2 / d ,6))

-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:21:56) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
print(round(a**2 + b**2 + c**2)/d,6)

-- OUTPUT:
25.666666666666668 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:22:24) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
print(round(a**2 + b**2 + c**2,6)/d)

-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:22:44) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
print(round((a**2 + b**2 + c**2)/d),6)

-- OUTPUT:
26 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:24:28) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
x=((a**2 + b**2 + c**2)/d)
print(round(x,6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:24:32) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
x=((a**2 + b**2 + c**2)/d)
print(round(x,6))

-- EXECUTION TIME:
0.200078
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:26:12) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
x=((a**2 + b**2 + c**2)/d)
print(round(x,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:26:27) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
d= a+b+c
x=((a**2 + b**2 + c**2)/d)
print(round(x,6))
-- EXECUTION TIME:
0.149849
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:26:44) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
x=((a**2 + b**2 + c**2)/a+b+c)
print(round(x,6))
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:31:30) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round(((a**2 + b**2 + c**2)/a+b+c))

-- ERROR:
File "XXXX", line 8
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:31:35) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round(((a**2 + b**2 + c**2)/a+b+c))
-- ERROR:
File "XXXX", line 8
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:31:47) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round(((a**2 + b**2 + c**2)/a+b+c),6)
-- ERROR:
File "XXXX", line 8
    
                                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:31:53) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round(((a**2 + b**2 + c**2)/a+b+c,6))
-- ERROR:
File "XXXX", line 8
    
                                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:32:03) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round(((a**2 + b**2 + c**2)/a+b+c,),6)
-- ERROR:
File "XXXX", line 8
    
                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:32:43) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c)
-- ERROR:
File "XXXX", line 8
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:32:46) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6)
-- ERROR:
File "XXXX", line 8
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:32:47) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6)
-- ERROR:
File "XXXX", line 8
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:32:48) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6)
-- ERROR:
File "XXXX", line 8
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:32:48) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6)
-- ERROR:
File "XXXX", line 8
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:32:49) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6)
-- ERROR:
File "XXXX", line 8
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:32:49) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6)
-- ERROR:
File "XXXX", line 8
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:33:09) 
-- CODE:
a= int((input()))
b= int((input()))
c= int((input()))
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6)
-- ERROR:
File "XXXX", line 8
    
                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:35:19) 
-- CODE:
a= input()
b= input()
c= input()
a !=0
b !=0
c !=0
print(round((a**a + b**b + c**c)/a+b+c,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round((a**a + b**b + c**c)/a+b+c,6))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:35:35) 
-- CODE:
a= input()
b= input()
c= input()
a !=0
b !=0
c !=0
print(int(round((a**a + b**b + c**c)/a+b+c,6)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(round((a**a + b**b + c**c)/a+b+c,6)))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:36:07) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**a + b**b + c**c)/a+b+c,6))
-- OUTPUT:
1.0294556609173342e+43
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:36:48) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6))
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:37:10) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a + b + c
print(round((a**2 + b**2 + c**2)/,6))
-- ERROR:
File "XXXX", line 8
    print(round((a**2 + b**2 + c**2)/,6))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:37:13) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a + b + c
print(round((a**2 + b**2 + c**2)/d,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:37:22) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a + b + c
print(round((a**2 + b**2 + c**2)/d,6))
-- EXECUTION TIME:
0.154273
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:37:25) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a + b + c
print(round((a**2 + b**2 + c**2)/d,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:38:15) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a**2 + b**2 + c**2
e = a + b + c
print(round(d/e,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:38:18) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a**2 + b**2 + c**2
e = a + b + c
print(round(d/e,6))
-- EXECUTION TIME:
0.274911
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:38:20) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a**2 + b**2 + c**2
e = a + b + c
print(round(d/e,6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:39:19) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a**a + b**b + c**c
e = a + b + c
print(round(d/e,6))
-- OUTPUT:
2.7452150957795578e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:40:22) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d= (round((a**2 + b**2 + c**2)/a+b+c,6))
-- OUTPUT:
2.7452150957795578e+42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:40:30) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d= (round((a**2 + b**2 + c**2)/a+b+c,6))
print(d)
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:40:53) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d= (round(a**2 + b**2 + c**2/a+b+c,6))
print(d)
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:41:07) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d= (round(a**2 + b**2 + c**2/a+b+c,6))
print(d)
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:41:10) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d= (round(a**2 + b**2 + c**2/a+b+c,6))
print(d)
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:41:12) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d= (round(a**2 + b**2 + c**2/a+b+c,6))
print(d)
-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:42:58) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d= (round((a**2 + b**2 + c**2)/a+b+c,6))
print(d)
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:45:54) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:48:54) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)(/a+b+c),6))

-- ERROR:
File "XXXX", line 7
    print(round((a**2 + b**2 + c**2)(/a+b+c),6))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:49:00) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:49:13) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/a+b+c,6))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:49:45) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round((a**2 + b**2 + c**2)/d,6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:49:48) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round((a**2 + b**2 + c**2)/d,6))

-- EXECUTION TIME:
0.165202
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:49:49) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round((a**2 + b**2 + c**2)/d,6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:51:30) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round((a**2 + b**2 + c**2)/a+b+c,6))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:51:41) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round(a**2 + b**2 + c**2/a+b+c,6))

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:51:43) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round(a**2 + b**2 + c**2/a+b+c,6))

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:51:44) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round(a**2 + b**2 + c**2/a+b+c,6))

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:51:45) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round(a**2 + b**2 + c**2/a+b+c,6))

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:51:52) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round(a**2 + b**2 + c**2 / a+b+c,6))

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:52:34) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round(a**2 + b**2 + c**2 /(a+b+c),6))

-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:52:44) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:52:47) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
d = a+b+c
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- EXECUTION TIME:
0.172294
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:52:53) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:52:55) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- EXECUTION TIME:
0.132182
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:52:57) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:53:00) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:53:03) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- EXECUTION TIME:
0.155357
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:53:07) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:53:13) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:53:35) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a !=0
b !=0
c !=0
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- EXECUTION TIME:
0.182291
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:54:07) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:54:10) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- EXECUTION TIME:
0.143711
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:54:14) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:55:03) 
-- CODE:
a= input()
b= input()
c= input()
print(round((a**2 + b**2 + c**2)/(a+b+c),6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round((a**2 + b**2 + c**2)/(a+b+c),6))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:55:17) 
-- CODE:
a= input()
b= input()
c= input()
int(print(round((a**2 + b**2 + c**2)/(a+b+c),6)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(print(round((a**2 + b**2 + c**2)/(a+b+c),6)))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:55:54) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 22:56:48) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
print(round((a**2 + b**2 + c**2)/(a+b+c),2))
-- OUTPUT:
25.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 22:56:52) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
print(round((a**2 + b**2 + c**2)/(a+b+c),2))
-- EXECUTION TIME:
0.138129
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.67
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.87
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 23:02:47) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
print(round((a**2 + b**2 + c**2)/(a+b+c),2))
-- OUTPUT:
25.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 23:42:20) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
print(round((a**2 + b**2 + c**2)/(a+b+c),2))
-- OUTPUT:
25.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 23:42:39) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),2))
-- OUTPUT:
25.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 23:42:46) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 23:42:49) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- EXECUTION TIME:
0.199016
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 23:44:29) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/a+b+c,6))
-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 23:44:39) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)(/a+b+c),6))
-- ERROR:
File "XXXX", line 8
    print(round((a**2 + b**2 + c**2)(/a+b+c),6))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 23:44:44) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 23:44:49) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:09:09) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:09:27) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- EXECUTION TIME:
0.193945
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:14:02) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!==0
b!==0
c!==0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- ERROR:
File "XXXX", line 4
    a!==0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:14:07) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:14:51) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- EXECUTION TIME:
0.142454
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:15:50) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:15:56) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- EXECUTION TIME:
0.114206
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:15:58) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:18:48) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0
(a**2 + b**2 + c**2)/(a+b+c)

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- EXECUTION TIME:
0.175695
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:20:51) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
(a+b+c)!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:20:56) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
(a+b+c)!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- EXECUTION TIME:
0.130422
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:20:57) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
(a+b+c)!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),6))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:21:10) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
(a+b+c)!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:21:12) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
(a+b+c)!=0

print(round((a**2 + b**2 + c**2)/(a+b+c),7))
-- EXECUTION TIME:
0.120727
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 08:22:31) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0
print(round((a**2 + b**2 + c**2)/(a+b+c),7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 08:22:35) 
-- CODE:
a= int(input())
b= int(input())
c= int(input())
a!=0
b!=0
c!=0
print(round((a**2 + b**2 + c**2)/(a+b+c),7))
-- EXECUTION TIME:
0.158908
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
